--- a/index.html
+++ b/index.html
@@ -1,51 +1,14 @@
-<body>
-  <div class="container">
-    <header class="cabecalho">
-      <div class="perfil">
-        <img class="perfil-foto" src="https://github.com/gitsamara.png" />
-        <div class="titulo">
+<!DOCTYPE html>
+<html lang="en">
 
-          <h1>Samara Sales</h1>
-          <h3>arquiteta estudando programação #imersaodev</h3>
-        </div>
-        <div class="tema">
-          <button onClick="mudaTema()">mudar tema</button>
-        </div>
-      </div>
-    </header>
-
-    <main class="projetos">
-      <ul>
-        <class="projetos-titulo">Projetos
-      </ul>
-      <li class="projetos-item">
-        <p>🔢 Calculadora de média</p>
-        <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="xxpVGxb" data-user="samarasales" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-          <span>See the Pen <a href="https://codepen.io/samarasales/pen/xxpVGxb">
-              Calculadora de média</a> by Samara Sales (<a href="https://codepen.io/samarasales">@samarasales</a>)
-            on <a href="https://codepen.io">CodePen</a>.</span>
-        </p>
-        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-      </li>
-      <li class="projetos-item">
-        <p>💰 Conversor de moedas</p>
-        <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="RwqxWdY" data-user="samarasales" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-          <span>See the Pen <a href="https://codepen.io/samarasales/pen/RwqxWdY">Conversor de moedas</a> by Samara Sales (<a href="https://codepen.io/samarasales">@samarasales</a>) on <a href="https://codepen.io">CodePen</a>.</span>
-        </p>
-        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-      </li>
-      <li class="projetos-item">
-        <p>🧙‍♀️ Mentalista</p>
-        <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="LYeNjaE" data-user="samarasales" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-          <span>See the Pen <a href="https://codepen.io/samarasales/pen/LYeNjaE">Mentalista</a> by Samara Sales (<a href="https://codepen.io/samarasales">@samarasales</a>) on <a href="https://codepen.io">CodePen</a>.</span>
-        </p>
-        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-      </li>
-    </main>
-  </div>
-</body>
-
-@import url("https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap");
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Minha Página</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap">
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap");
 
 body {
   background: #d59dfa;
@@ -162,3 +125,61 @@ body {
   box-shadow: inset 0px 0px 0px 0px #f0f0f0;
   margin: 15px 0px;
 }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <header class="cabecalho">
+      <div class="perfil">
+        <img class="perfil-foto" src="https://github.com/gitsamara.png" />
+        <div class="titulo">
+          <h1>Samara Sales</h1>
+          <h3>arquiteta estudando programação #imersaodev</h3>
+        </div>
+        <div class="tema">
+          <button id="temaBtn">mudar tema</button>
+        </div>
+      </div>
+    </header>
+
+    <main class="projetos">
+      <ul class="projetos-titulo">Projetos
+        <li class="projetos-item">
+          <p>🔢 Calculadora de média</p>
+         <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="xxpVGxb" data-user="samarasales" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+          <span>See the Pen <a href="https://codepen.io/samarasales/pen/xxpVGxb">
+              Calculadora de média</a> by Samara Sales (<a href="https://codepen.io/samarasales">@samarasales</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </li>
+        <li class="projetos-item">
+          <p>💰 Conversor de moedas</p>
+          <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="RwqxWdY" data-user="samarasales" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+          <span>See the Pen <a href="https://codepen.io/samarasales/pen/RwqxWdY">Conversor de moedas</a> by Samara Sales (<a href="https://codepen.io/samarasales">@samarasales</a>) on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </li>
+        <li class="projetos-item">
+          <p>🧙‍♀️ Mentalista</p>
+          <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="LYeNjaE" data-user="samarasales" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+          <span>See the Pen <a href="https://codepen.io/samarasales/pen/LYeNjaE">Mentalista</a> by Samara Sales (<a href="https://codepen.io/samarasales">@samarasales</a>) on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+     
+        </li>
+      </ul>
+    </main>
+  </div>
+
+  <script>
+    document.getElementById("temaBtn").addEventListener("click", mudaTema);
+
+    function mudaTema() {
+      document.body.classList.toggle("dark");
+    }
+  </script>
+</body>
+
+</html>
