--- a/frontweb/pratica.html
+++ b/frontweb/pratica.html
@@ -39,4 +39,4 @@
         <del> deletado
         <pre> com essa tag o texto fica com os espaçamentos exatos que você definiu na escrita -->
 
-<!-- para redirecionar o hiperlink para uma nova ABA inserir target="_blank", caso contrário o hiperlink carregará na mesma aba acesso -->
+<!-- para redirecionar o hiperlink para uma nova ABA inserir target="_blank", caso contrário o hiperlink carregará na mesma aba de acesso -->
